# genshin-aiogram-bot

./: .gitignore  README.md  pyproject.toml
genshin-aiogram-bot/: bot.py
genshin-aiogram-bot/tg_bot/: config.py
genshin-aiogram-bot/tg_bot/handlers/: genshin.py
genshin_services/: wishes.py
tg_bot/: config.py
tg_bot/handlers/: genshin.py
