[tool.poetry]
name = "genshin-aiogram-bot"
version = "0.1.0"
description = ""
authors = ["lebelius <alexeevroma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
genshin = "^1.2.0"
aiogram = "^2.20"
wemake-python-styleguide = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
